src/videoio.h

    typedef cv::VideoCapture *VideoCapture;
    typedef cv::VideoWriter *VideoWriter;
typedef void *VideoCapture;
typedef void *VideoWriter;
    void VideoCapture_Close(VideoCapture v);
    void VideoWriter_Close(VideoWriter vw);
    void VideoWriter_Open(VideoWriter vw, const char *name, const char *codec, double fps, int width,
                          int height, bool isColor);
    void VideoWriter_Write(VideoWriter vw, Mat img);
    void VideoWriter_Release(VideoWriter vw);