packages/dartcv/lib/src/g/videoio.g.dart


  late final _VideoWriter_OpenPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Bool)>>('VideoWriter_Open');
  late final _VideoWriter_Open = _VideoWriter_OpenPtr.asFunction<
      ffi.Pointer<CvStatus> Function(
          VideoWriter, ffi.Pointer<ffi.Char>, int, double, int, int, bool)>();

  ffi.Pointer<CvStatus> VideoWriter_Open_1(
    VideoWriter self,
    ffi.Pointer<ffi.Char> name,
    int apiPreference,
    int fourcc,
    double fps,
    int width,
    int height,
    bool isColor,
  ) {
    return _VideoWriter_Open_1(
      self,
      name,
      apiPreference,
      fourcc,
      fps,
      width,
      height,
      isColor,
    );
  }

  late final _VideoWriter_Open_1Ptr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Bool)>>('VideoWriter_Open_1');
  late final _VideoWriter_Open_1 = _VideoWriter_Open_1Ptr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoWriter, ffi.Pointer<ffi.Char>, int,
          int, double, int, int, bool)>();

  ffi.Pointer<CvStatus> VideoWriter_Open_Async(
    VideoWriter self,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> codec,
    double fps,
    int width,
    int height,
    bool isColor,
    imp1.CvCallback_1 callback,
  ) {
    return _VideoWriter_Open_Async(
      self,
      name,
      codec,
      fps,
      width,
      height,
      isColor,
      callback,
    );
  }

  late final _VideoWriter_Open_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Double,
              ffi.Int,
              ffi.Int,
              ffi.Bool,
              imp1.CvCallback_1)>>('VideoWriter_Open_Async');
  late final _VideoWriter_Open_Async = _VideoWriter_Open_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoWriter, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>, double, int, int, bool, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> VideoWriter_Release(
    VideoWriter self,
  ) {
    return _VideoWriter_Release(
      self,
    );
  }

  late final _VideoWriter_ReleasePtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<CvStatus> Function(VideoWriter)>>(
          'VideoWriter_Release');
  late final _VideoWriter_Release = _VideoWriter_ReleasePtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoWriter)>();

  ffi.Pointer<CvStatus> VideoWriter_Release_Async(
    VideoWriter self,
    imp1.CvCallback_0 callback,
  ) {
    return _VideoWriter_Release_Async(
      self,
      callback,
    );
  }

  late final _VideoWriter_Release_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter, imp1.CvCallback_0)>>('VideoWriter_Release_Async');
  late final _VideoWriter_Release_Async =
      _VideoWriter_Release_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(VideoWriter, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> VideoWriter_Write(
    VideoWriter self,
    Mat img,
  ) {
    return _VideoWriter_Write(
      self,
      img,
    );
  }

  late final _VideoWriter_WritePtr = _lookup<
          ffi.NativeFunction<ffi.Pointer<CvStatus> Function(VideoWriter, Mat)>>(
      'VideoWriter_Write');
  late final _VideoWriter_Write = _VideoWriter_WritePtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoWriter, Mat)>();

  ffi.Pointer<CvStatus> VideoWriter_Write_Async(
    VideoWriter self,
    Mat img,
    imp1.CvCallback_0 callback,
  ) {
    return _VideoWriter_Write_Async(
      self,
      img,
      callback,
    );
  }

  late final _VideoWriter_Write_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter, Mat, imp1.CvCallback_0)>>('VideoWriter_Write_Async');
  late final _VideoWriter_Write_Async = _VideoWriter_Write_AsyncPtr.asFunction<
      ffi.Pointer<CvStatus> Function(VideoWriter, Mat, imp1.CvCallback_0)>();

  ffi.Pointer<CvStatus> VideoWriter_getBackendName(
    VideoWriter self,
    ffi.Pointer<ffi.Pointer<ffi.Char>> rval,
  ) {
    return _VideoWriter_getBackendName(
      self,
      rval,
    );
  }

  late final _VideoWriter_getBackendNamePtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(
                  VideoWriter, ffi.Pointer<ffi.Pointer<ffi.Char>>)>>(
      'VideoWriter_getBackendName');
  late final _VideoWriter_getBackendName =
      _VideoWriter_getBackendNamePtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VideoWriter, ffi.Pointer<ffi.Pointer<ffi.Char>>)>();

  late final addresses = _SymbolAddresses(this);
}

class _SymbolAddresses {
  final CvNativeVideoIO _library;
  _SymbolAddresses(this._library);
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(VideoCapturePtr)>>
      get VideoCapture_Close => _library._VideoCapture_ClosePtr;
  ffi.Pointer<ffi.NativeFunction<ffi.Void Function(VideoWriterPtr)>>
      get VideoWriter_Close => _library._VideoWriter_ClosePtr;
}

typedef CvStatus = imp1.CvStatus;
typedef Mat = imp1.Mat;

final class VideoCapture extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef VideoCapturePtr = ffi.Pointer<VideoCapture>;

final class VideoWriter extends ffi.Struct {
  external ffi.Pointer<ffi.Void> ptr;
}

typedef VideoWriterPtr = ffi.Pointer<VideoWriter>;
